# claim-decision-explainer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  mlflow.db  pyproject.toml  requirements.txt  run_streamlit.py
.github/workflows/: ci.yml
app/: config.py  main.py  observability.py  schemas.py  secrets_utils.py
app/graph/: build.py  nodes.py  state.py
app/graph/nodes/: assemble.py  attribute.py  explain.py  predict.py
app/model/: embedder.py  predictor.py
app/prompts/: adjuster.txt  customer.txt
artifacts/: catboost_model.cbm  feature_spec.json
data/: claim_use_case_dataset.xlsx  dataset.xlsx  fix_utf.py  synthetic_borderline_claims_dataset.xlsx  synthetic_claims_dataset.xlsx  synthetic_scenario_generation.py
docs/: DESIGN.md  NOTES_internal.md  [Take Home] Senior GenAI ML Engineer - GenAI-Powered Claim Approval Agent.docx
mlruns/0b10c7cb42764bbca10ccac3246ae396/artifacts/serving_contract/: feature_spec.json
mlruns/53f649b29b1d431ba256feabe1b6c967/artifacts/serving_contract/: feature_spec.json  sample_claim.json
mlruns/ac84ed9133cc4e7cadc4e8b6ccb3aacf/artifacts/serving_contract/: feature_spec.json  sample_claim.json
mlruns/models/m-159c5741a0f94574b64da4eda9141bf0/artifacts/: MLmodel  conda.yaml  model.cb
notebooks/: EDA + modeling.ipynb  synthetic_scenario_generation.ipynb  synthetic_scenario_generation.py
skill/: fastapi.md  langfuse.md  python.md  streamlit.md
streamlit_app/: api_client.py  config.py  dataset.py  ui.py
tests/: test_endpoint.py  test_predictor.py
(+20 files in other folders)
