[project]
name = "claim-approval-agent"
version = "0.1.0"
description = "GenAI-powered claim approval prediction + multi-persona explanation service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "langgraph>=0.2",
    "anthropic>=0.30",
    "voyageai>=0.2",
    "catboost>=1.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "langfuse>=4",
    "mlflow>=2.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
ui = [
    "streamlit>=1.30",
    "requests>=2.31",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
include = ["app*", "streamlit_app*"]
